fit the template better by shifting postdoc to training

--- a/bio-hartmann-fmitf-2018.tex
+++ b/bio-hartmann-fmitf-2018.tex
@@ -230,16 +230,20 @@ Harvard University (Cambridge, MA, USA)\\
     Dissertation: \textit{Clustering and Visualizing Solution Variation in Massive Programming Classes}
 %    Thesis Advisor: Professor Scott Klemmer.  
 }
+\DatedItem{2016-2018}{University of California, Berkeley (Berkeley, CA, USA)}{
+    Postdoctoral Scholar, EECS \& Berkeley Institute for Design\\
+    Fellow, Berkeley Institute of Data Science
+}
 
 %----------------------------------------------------------------------------
 \Section{Appointments:}\\
-\DatedItem{2016--2018}{University of California, Berkeley (Berkeley, CA, USA)}{  \\
-            Postdoctoral Scholar, EECS \& Berkeley Institute for Design\\
-            Fellow, Berkeley Institute of Data Science
+%\DatedItem{2016--2018}{University of California, Berkeley (Berkeley, CA, USA)}{  \\
+%            Postdoctoral Scholar, EECS \& Berkeley Institute for Design\\
+%            Fellow, Berkeley Institute of Data Science
             %CTO, Jacobs Institute for Design Innovation \\
 %Co-Founder, CITRIS Invention Lab \\
 %Co-Director, Berkeley Institute for Design and Swarm Lab
-}
+%}
 \DatedItem{2018--present}{Harvard University (Cambridge, MA, USA)}{  \\
             Assistant Professor, CS, SEAS \& Radcliffe Institute for Advanced Study
             %CTO, Jacobs Institute for Design Innovation \\
