responded to Bjoern's feedback

--- a/bio-hartmann-fmitf-2018.tex
+++ b/bio-hartmann-fmitf-2018.tex
@@ -346,11 +346,11 @@ Andrew Head, Elena Glassman, Gustavo Soares, Ryo Suzuki, Lucas Figueredo, Loris 
 
 %innovations in teaching and training (e.g., development of curricular materials and pedagogical methods); contributions to the science of learning; development and/or refinement of research tools; computation methodologies and algorithms for problem-solving; development of databases to support research and education; broadening the participation of groups underrepresented in STEM; and service to the scientific and engineering community outside of the individual’s immediate organization.
 
-1. Developed and taught introductory computer science curriculum for, and later served on the leadership team for, the Middle East Education through Technology organization, which brings together high-school-age Israeli and Palestinian boys and girls to create positive change through technology and entrepreneurship, in partnership with the Massachusetts Institute of Technology (MIT).\\[2pt]
-2. Awarded the MIT Amar Bose Teaching Fellowship, for developing innovative tools for teaching computer science at scale at MIT, such as a tool for eliciting and distributing personalized learnersourced debugging and design optimization hints in MIT's undergraduate digital architecture class.\\[2pt]
+1. Awarded the MIT Amar Bose Teaching Fellowship, for developing innovative tools for teaching computer science at scale at MIT, such as a tool for eliciting and distributing personalized learnersourced debugging and design optimization hints in MIT's undergraduate digital architecture class.\\[2pt]
+2. Developed and taught introductory computer science curriculum for, and later served on the leadership team for, the Middle East Education through Technology organization, which brings together high-school-age Israeli and Palestinian boys and girls to create positive change through technology and entrepreneurship, in partnership with the Massachusetts Institute of Technology (MIT).\\[2pt]
 %3. Participated in the MIT Teaching \& Learning Lab Graduate Teaching ...\\
-4. Worked with course staff to deploy \ttt{OverCode} [Glassman et al. 2015] at University of California, Berkeley to help graders compose and deliver composition feedback and grades to over 1500 students in a single semester.\\[2pt]
-5. Led an MIT M.Eng. student through the process of deploying a variant of the same tool, \ttt{GroverCode}, to fulfill her thesis requirement and support the composition grading of hundreds of MIT student-written programs submitted in the MIT EECS department's introductory programming course.\\[2pt]
+3. Worked with course staff to deploy \ttt{OverCode} [Glassman et al. 2015] at University of California, Berkeley to help graders compose and deliver composition feedback and grades to over 1500 students in a single semester.\\[2pt]
+%5. Led an MIT M.Eng. student through the process of deploying a variant of the same tool, \ttt{GroverCode}, to fulfill her thesis requirement and support the composition grading of hundreds of MIT student-written programs submitted in the MIT EECS department's introductory programming course.\\[2pt]
 %5. Co-taught the combined undergraduate/graduate user interface design course that was part of the core curriculum for CS students in the MIT EECS department (approx. 175 students).
 %1. Faculty Director for the Jacobs Institute for Design Innovation at UC Berkeley, a new undergraduate engineering design institute at home in the newly constructed Jacobs Hall. (CTO Spring 2014--2016, Director 2016--Present, building opened in Fall 2015.)\\{\small \url{http://jacobsinstitute.berkeley.edu}}\\[2pt]
 %2. Co-Founder and Co-Director of the CITRIS Invention Lab, a rapid prototyping facility and experiential learning studio that focuses on wireless electronics and digital fabrication tools. (2012--Present)\\{\small \url{http://inventionlab.org}} \\[2pt]
