added a missing carriage return

--- a/bio-hartmann-fmitf-2018.tex
+++ b/bio-hartmann-fmitf-2018.tex
@@ -230,7 +230,7 @@ Harvard University (Cambridge, MA, USA)\\
     Dissertation: \textit{Clustering and Visualizing Solution Variation in Massive Programming Classes}
 %    Thesis Advisor: Professor Scott Klemmer.  
 }
-\DatedItem{2016-2018}{University of California, Berkeley (Berkeley, CA, USA)}{
+\DatedItem{2016-2018}{University of California, Berkeley (Berkeley, CA, USA)}{\\
     Postdoctoral Scholar, EECS \& Berkeley Institute for Design\\
     Fellow, Berkeley Institute of Data Science
 }
