--- a/main.tex
+++ b/main.tex
@@ -227,8 +227,11 @@ Harvard University (Cambridge, MA, USA)\\
     Master of Engineering in Electrical Engineering \& Computer Science}
 \DatedItem{Sept 2016}{Massachusetts Institute of Technology (Cambridge, MA, USA)}{\\
     Doctor of Philosophy in Electrical Engineering \& Computer Science\\
-    Dissertation: \textit{Clustering and Visualizing Solution Variation in Massive Programming Classes}
-%    Thesis Advisor: Professor Scott Klemmer.  
+    Thesis: \textit{Clustering and Visualizing Solution Variation in Massive Programming Classes}\\
+    Thesis Advisor: Rob Miller, Distinguished Professor of Computer Science }\\
+\DatedItem{2016--2018}{University of California, Berkeley (Berkeley, CA, USA)}{\\
+    Postdoctoral Scholar, EECS \& Berkeley Institute for Design\\
+    Fellow, Berkeley Institute of Data Science
 }
 
 
@@ -239,10 +242,6 @@ Harvard University (Cambridge, MA, USA)\\
 }
 \DatedItem{2018--2018}{Harvard University (Cambridge, MA, USA)}{  \\
             Research Associate, CS, SEAS
-}
-\DatedItem{2016--2018}{University of California, Berkeley (Berkeley, CA, USA)}{\\
-    Postdoctoral Scholar, EECS \& Berkeley Institute for Design\\
-    Fellow, Berkeley Institute of Data Science
 }
 \\\\
 
@@ -257,94 +256,43 @@ Harvard University (Cambridge, MA, USA)\\
 \Section{Products}\\
 {\bf Five Most Relevant Products:}\\
 % CHI 2018
-1. ``Visualizing API Usage Examples at Scale'' by Elena Glassman*, Tianyi Zhang*, Bj\"orn Hartmann, Miryung Kim. \emph{ACM Conference on Human Factors in Computing Systems} (CHI), Paper No. 580, 2018. *indicates equal contribution\\[2pt]
+1. ``How Proxy Tasks and Subjective Measures Can Be Misleading in Evaluating XAI Systems'' by Zana Bucinca*, Phoebe Lin*, Krzysztof Gajos, and Elena Glassman. To be published in {\em ACM Intelligent User Interfaces} (IUI) 2020. *indicates equal contribution\\[2pt]
+2. ``Characterizing Developer Use of Automatically Generated Patches'' by Jos\'e Pablo Cambronero, Jiasi Shen, J\"urgen Cito, Elena Glassman, and Martin Rinard. IEEE VL/HCC 2019.\\[2pt]
+3. ``Enabling Data-Driven API Design with Community Usage Data: A Need-Finding Study'' by Tianyi Zhang, Björn Hartmann, Miryung Kim, and Elena Glassman. To be published in \emph{ACM Conference on Human Factors in Computing Systems} (CHI) 2020.\\[2pt]
+4. ``Visualizing API Usage Examples at Scale'' by Elena Glassman*, Tianyi Zhang*, Bj\"orn Hartmann, Miryung Kim. \emph{ACM Conference on Human Factors in Computing Systems} (CHI), Paper No. 580, 2018. *indicates equal contribution\\[2pt]
 % L@S2017
-2. ``Writing Reusable Code Feedback at Scale with Mixed-Initiative Program Synthesis'' by
-Andrew Head, Elena Glassman, Gustavo Soares, Ryo Suzuki, Lucas Figueredo, Loris D'Antoni, Bj\"orn Hartmann. {\em ACM Learning@Scale Conference}, pp.~89--98, 2017\\[2pt]
-% VL/HCC
-3. ``TraceDiff: Debugging Unexpected Code Behavior Using Trace Divergences'' by Ryo Suzuki, Gustavo Soares, Andrew Head, Elena Glassman, Ruan Reis, Melina Mongiovi, Loris D'Antoni, and Bj\"orn Hartmann \emph{IEEE Symposium on Visual Languages and Human-Centric Computing} (VL/HCC), pp.~107--115, 2017.\\[2pt]
-% TOCHI 2015
-4. ``OverCode: visualizing variation in student solutions to programming problems at scale'' by Elena Glassman, Jeremy Scott, Rishabh Singh, Philip Guo, Robert Miller. \emph{ACM Transactions on Computer-Human Interaction} ({\small Special Issue on Online Learning at Scale}), 22 (2), April 2015.\\[2pt]
-% Foobaz
-5. ``Foobaz: Variable Name Feedback for Student Code at Scale'' by Elena Glassman, Lyla Fischer, Jeremy Scott, Robert Miller. \emph{ACM Symposium on User Interface Software \& Technology} (UIST), pp.~609--617, 2015.\\[2pt]
-
-% ICSE 2017
-%2. ``Learning Syntactic Program Transformations from Examples'' by Reudismam Rolim, Gustavo Soares, Björn Hartmann, Loris D’Antoni, Oleksandr Polozov, Sumit Gulwani, Rohit Gheyi, Ryo Suzuki. {\em International Conference on Software Engineering (ICSE)}, pp. 404--415, 2017.\\[2pt]
-% AutomataTutor
-%3. ``How Can Automatic Feedback Help Students Construct Automata?'' by Loris D'Antoni, Dileep Kini, Rajeev Alur, Sumit Gulwani, Mahesh Viswanathan, Bj\"orn Hartmann. {\em ACM Transactions on Computer-Human Interaction} (TOCHI) 22 (2), 9, 2015.\\[2pt]
- % wwopd
-%4. ``What Would Other Programmers Do? Suggesting Solutions to Error Messages'' by Bj\"orn Hartmann, Daniel MacDougall, Joel Brandt, and Scott R. Klemmer. {\em ACM Human Factors in Computing Systems (CHI)}, pp.~1019-1028, Apr 2010. {\em (Honorable Mention)}\\[2pt]
-%Stack Overflow
-%3. ``Design Lessons from the Fastest Q\&A Site in the West'' by Lena Mamykina, Bella Manoim, Manas Mittal, Geroge Hripcsak, and Bj\"orn Hartmann. {\em ACM Human Factors in Computing Systems (CHI)}, pp.~2857-2866, Apr 2011.} {\em (Honorable Mention)}\\[2pt]
-% Peer LEarning
-%4. ``Structuring interactions for large-scale synchronous peer learning'' by Derrick Coetzee, Seongtaek Lim, Armando Fox, Bj\"{o}rn Hartmann, and Marti A Hearst. {\em ACM Conference on Computer Supported Cooperative Work \& Social Computing (CSCW)}, pp.~1139-1152, 2015.\\[2pt]
-%CodeHint
-%5. ``Codehint: Dynamic and interactive synthesis of code snippets'' by Joel Galenson, Philip Reames, Rastislav Bodik, Björn Hartmann, and Koushik Sen. {\em International Conference on Software Engineering (ICSE)}, pp.~653-663, 2014.\\[2pt]
+5. ``Writing Reusable Code Feedback at Scale with Mixed-Initiative Program Synthesis'' by Andrew Head, Elena Glassman, Gustavo Soares, Ryo Suzuki, Lucas Figueredo, Loris D'Antoni, Bj\"orn Hartmann. {\em ACM Learning@Scale Conference}, pp.~89--98, 2017\\[2pt]
 
 
-% Exemplar
-%1. ``Authoring Sensor Based Interactions Through Direct Manipulation and Pattern Matching'' by Bj\"orn Hartmann, Leith Abdulla, Manas Mittal and Scott R. Klemmer. {\em Proc. ACM Human Factors in Computing Systems (CHI), pp.~145-154, Apr 2007.} {\em (CHI 2007 Best Paper Award)}\\[2pt]
-% Bespoke
-%2. ``Designing Bespoke Interactive Devices'' by Bj\"orn Hartmann and Paul K. Wright. {\em IEEE Computer, 46 (8), pp.~85-89, Aug 2013}.\\[2pt]
-% fabryq
-%3. ``fabryq: Using Phones as Gateways to Prototype Internet of Things Applications using Web Scripting'' by Will McGrath, Mozziyar Etemadi, Shuvo Roy and Bj\"orn Hartmann. {\em Proc. ACM Symposium on Engineering Interactive Computing Systems (EICS), pp.~164-173, June 2015.}\\[2pt]
-%d.tools
-%4. ``Reflective physical prototyping through integrated design, test, and analysis.'' by Bj\"orn Hartmann, Scott R. Klemmer, Michael Bernstein, Leith Abdulla, Brandon Burr, Avi Robinson-Mosher, and Jennifer Gee. {\em Proc. ACM Symposium on User Interface Software and Technology (UIST), pp.~299-308, Oct 2006.} {\em (UIST 2006 Best Paper Award)}\\[2pt]
-% Midas
-%5. ``Midas: Fabricating Custom Capacitive Touch Sensors to Prototype Interactive Objects'' by Valkyrie Savage, Xiaohan Zhang and Bj\"orn Hartmann. {\em Proc. ACM Symposium on User Interface Software and Technology (UIST), pp.~579-588, Oct 2012.}\\[2pt]
 
 %----------------------------------------------------------------------------
-\clearpage
+%\clearpage
 {\bf Five Other Products:}\\
 % CHI2018
 1. ``Interactive Extraction of Examples from Existing Code'' by Andrew Head, Elena Glassman, Bj\"orn Hartmann, Marti Hearst. \emph{ACM Conference on Human Factors in Computing Systems} (CHI), Paper No. 85, 2018. {\em (Honorable Mention---Top 4\%)}\\[2pt]
 % CSCW16
 2. ``Learnersourcing Personalized Hints'' by Elena Glassman, Aaron Lin, Carrie Cai, Rob Miller. \emph{ACM Computer-Supported Cooperative Work and Social Computing} (CSCW), pp.~1626--1636, 2016.\\[2pt]
+% TOCHI 2015
+3. ``OverCode: visualizing variation in student solutions to programming problems at scale'' by Elena Glassman, Jeremy Scott, Rishabh Singh, Philip Guo, Robert Miller. \emph{ACM Transactions on Computer-Human Interaction} ({\small Special Issue on Online Learning at Scale}), 22 (2), April 2015.\\[2pt]
+% Foobaz
+4. ``Foobaz: Variable Name Feedback for Student Code at Scale'' by Elena Glassman, Lyla Fischer, Jeremy Scott, Robert Miller. \emph{ACM Symposium on User Interface Software \& Technology} (UIST), pp.~609--617, 2015.\\[2pt]
 % DocMatrix
-3. ``DocMatrix: Self-Teaching from Multiple Sources'' by Elena Glassman, Daniel Russell. \emph{Proceedings of the Association for Information Science and Technology}, 53 (1), 2016.\\[2pt]
-4. ``Mudslide: A Spatially Anchored Census of Student Confusion for Online Lecture Videos'' by Elena Glassman, Juho Kim, Andr\'es Monroy-Hern\'andez, Merrie Ringel Morris. \emph{ACM Conference on Human Factors in Computing Systems} (CHI), pp.~1555--1564, 2015. {\em (Honorable Mention---Top 5\%)}\\[2pt]
-5. ``RIMES: Embedding Interactive Multimedia Exercises in Lecture Videos'' by Juho Kim, Elena Glassman, Andr\'es Monroy-Hern\'andez, Merrie Ringel Morris. \emph{ACM Conference on Human Factors in Computing Systems} (CHI), pp.~1535--1544, 2015.\\[2pt]
-% Sauron
-%1. ``Sauron: Embedded Single-Camera Sensing of Printed Physical User Interfaces'' by Valkyrie Savage, Colin Chang and Bj\"orn Hartmann. {\em Proc. ACM Symposium on User Interface Software and Technology (UIST), pp.~447-456, Oct 2013.}\\[2pt]
-% Proton
-%2. ``Proton: Multitouch Gestures as Regular Expressions'' by Kenrick Kin, Bj\"{o}rn Hartmann, Tony DeRose and Maneesh Agrawala. {\em Proc. ACM Human Factors in Computing Systems (CHI), pp.~2885-2894, May 2012.}\\[2pt]
-%Eden
-%3. ``Eden: A Professional Multitouch Tool for Constructing Virtual Organic Environments'' by Kenrick Kin, Tom Miller, Bj\"{o}rn Bollensdorff,Tony DeRose, Bj\"{o}rn Hartmann, and Maneesh Agrawala. {\em ACM Human Factors in Computing Systems (CHI), pp.~1343-1352, Apr 2011.} {\em (Honorable Mention)}\\[2pt]
-% Umati
-%4. ``Communitysourcing: Engaging Local Crowds to Perform Expert Work Via Physical Kiosks'' by Kurtis Heimerl, Brian Gawalt, Tapan Parikh, and Bj\"orn Hartmann. {\em ACM Human Factors in Computing Systems (CHI), pp.~1539-1548, May 2012.} {\em (Best Paper Award)}\\[2pt]
-% Soylent
-%5. ``Soylent: A Word Processor with a Crowd Inside'' by Michael Bernstein, Greg Little, Robert C. Miller, Bj\"orn Hartmann, Mark A. Ackerman, David R. Karger, David Crowell, and Katrina Panovich. {\em ACM Symposium on User Interface Software and Technology (UIST), pp.~313-322, Oct 2010.} {\em (Best Student Paper Award)}\\[2pt]
+%3. ``DocMatrix: Self-Teaching from Multiple Sources'' by Elena Glassman, Daniel Russell. \emph{Proceedings of the Association for Information Science and Technology}, 53 (1), 2016.\\[2pt]
+5. ``Mudslide: A Spatially Anchored Census of Student Confusion for Online Lecture Videos'' by Elena Glassman, Juho Kim, Andr\'es Monroy-Hern\'andez, Merrie Ringel Morris. \emph{ACM Conference on Human Factors in Computing Systems} (CHI), pp.~1555--1564, 2015. {\em (Honorable Mention---Top 5\%)}\\[2pt]
+%5. ``RIMES: Embedding Interactive Multimedia Exercises in Lecture Videos'' by Juho Kim, Elena Glassman, Andr\'es Monroy-Hern\'andez, Merrie Ringel Morris. \emph{ACM Conference on Human Factors in Computing Systems} (CHI), pp.~1535--1544, 2015.\\[2pt]
 
-% How Bodies Matter DIS06
-%5. ``How Bodies Matter'' by Scott R. Klemmer, Bj\"orn Hartmann, and Leila Takayama. {\em Proc. ACM Conference on Designing Interactive Systems (DIS), pp.~140-149, June 2006.}\\[2pt]
-%Democut
-%1. ``DemoCut: generating concise instructional videos for physical demonstrations'' by Pei-Yu Chi, Joyce Liu, Jason Linder, Mira Dontcheva, Wilmot Li. and Bj\"orn Hartmann. {\em Proc. ACM Symposium on User Interface Software and Technology (UIST), Oct 2013.}\\[2pt]
-%MixT:
-%2. ``MixT: Automatic Generation of Step-By-Step Mixed Media Tutorials'' by Pei-Yu (Peggy) Chi, Sally Ahn, Amanda Ren, Mira Dontcheva, Wilmot Li, and Bj\"orn Hartmann. {\em ACM Symposium on User Interface Software and Technology (UIST), pp.~93-102, Oct 2012.}\\[2pt]
-%Showmehow
-%3. ``ShowMeHow: Translating User Interface Instructions Between Similar Applications'' by Vidya Ramesh, Charlie Hsu, Maneesh Agrawala, and Bj\"orn Hartmann. {\em ACM Symposium on User Interface Software and Technology (UIST), pp.~127-134,  Oct 2011.}\\[2pt]
-
-%2. ``Shepherding the Crowd Yields Better Work'' by Steven Dow, Anand Kulkarni, Scott R. Klemmer, and Bj\"orn Hartmann. {\em ACM Conference on Computer Supported Cooperative Work (CSCW), pp.~1013-1022, Feb 2012.}\\[2pt]
-%Juxtapose
-%1. ``Design As Exploration: Creating Interface Alternatives Through Parallel Authoring and Runtime Tuning'' by Bj\"orn Hartmann, Loren Yu, Abel Allison, Yeonsoo Yang, and Scott R. Klemmer. {\em Proc. ACM Symposium on User Interface Software and Technology (UIST), pp.~91-100, Oct 2008.} {\em (UIST 2008 Best Student Paper Award)}\\[2pt]
-%2. ``Delta: A Tool For Representing and Comparing Workflows'' by Nicholas Kong, Tovi Grossman, Bj\"orn Hartmann, George Fitzmaurice and Maneesh Agrawala. {\em ACM Human Factors in Computing Systems (CHI), pp.~1027-1036, May 2012.}\\[2pt]
-%3. ``Pictionaire: Supporting Collaborative Design Work by Integrating Physical and Digital Artifacts.'' by Bj\"orn Hartmann, Meredith Ringel Morris, Hrvoje Benko, and Andrew D. Wilson. {\em Proc. ACM Conference on Computer Supported Cooperative Work (CSCW), pp.~421-424, Feb 2010.}\\[2pt]
-%4. ``Programming by a Sample: Leveraging Web sites to program their underlying services.'' by Bj\"orn Hartmann, Leslie Wu, Kevin Collins and Scott R. Klemmer. In A. Cypher, M. Dontcheva, J. Nichols (eds.), {\em No Code Required: Giving Users Tools to Transform the Web.} Morgan Kaufmann, 2010.\\[2pt]
-%2. ``Collaboratively Crowdsourcing Workflows with Turkomatic'' by Anand Kulkarni, Matthew Can, and Bj\"orn Hartmann. {\em ACM Conference on Computer Supported Cooperative Work (CSCW), Feb 2012. In Press.}\\[2pt]
-%5. ``What's the Right Price? Pricing Tasks for Finishing on Time'' by Siamak Faridani, Bj\"orn Hartmann and Panos G. Ipeirotis. {\em AAAI Workshop on Human Computation (HCOMP), Aug 2011}.\\[2pt]
-%2. ``d.note: Revising User Interfaces Through Change Tracking, Annotations, and Alternatives"  by Bj\"orn Hartmann, Sean Follmer, Antonio Ricciardi, Timothy Cardenas, and Scott R. Klemmer. %{\em Proc. ACM Human Factors in Computing Systems (CHI), pp.~493-502, Apr 2010.}\\[2pt]
-%2. ``HyperSource: Bridging the Gap Between Source and Code-Related Web Sites'' by Bj\"orn Hartmann, Mark Dhillon, and Matthew K. Chan. {\em Proc. ACM Human Factors in Computing Systems (CHI), pp.~2207-2210, Apr 2011.} \\[2pt]
 
 
 %----------------------------------------------------------------------------
 \Section{Synergistic Activities:}\\
-
 %innovations in teaching and training (e.g., development of curricular materials and pedagogical methods); contributions to the science of learning; development and/or refinement of research tools; computation methodologies and algorithms for problem-solving; development of databases to support research and education; broadening the participation of groups underrepresented in STEM; and service to the scientific and engineering community outside of the individual’s immediate organization.
-
-1. Awarded the MIT Amar Bose Teaching Fellowship, for developing innovative tools for teaching computer science at scale at MIT, such as a tool for eliciting and distributing personalized learnersourced debugging and design optimization hints in MIT's undergraduate digital architecture class.\\[2pt]
+1. Awarded the MIT Amar Bose Teaching Fellowship, for developing and deploying innovative tools for teaching computer science at scale at MIT, such as a tool for eliciting and distributing personalized learnersourced debugging and design optimization hints [Glassman et al. 2016] in MIT's undergraduate digital architecture class (approx. 200 students per semester).\\[2pt]
 2. Developed and taught introductory computer science curriculum for, and later served on the leadership team for, the Middle East Education through Technology organization, which brings together high-school-age Israeli and Palestinian boys and girls to create positive change through technology and entrepreneurship, in partnership with the Massachusetts Institute of Technology (MIT).\\[2pt]
 %3. Participated in the MIT Teaching \& Learning Lab Graduate Teaching ...\\
-3. Worked with course staff to deploy \ttt{OverCode} [Glassman et al. 2015] at University of California, Berkeley to help graders compose and deliver composition feedback and grades to over 1500 students in a single semester.\\[2pt]
+3. Worked with University of California, Berkeley's CS61A course staff to deploy \ttt{OverCode} [Glassman et al. 2015] to help graders compose and deliver composition feedback and grades to {\bf over 1500 students} in a single semester.\\[2pt]
+4. Co-led the 2019 ACM User Interface Software \& Technology Doctoral Symposium to coach a diverse group of promising graduating PhD students in human-computer interaction reach their goals of graduating with a strong thesis and finding a research job that fits their needs and desires.\\[2pt]
+5. Co-organized the 2019 PLATEAU workshop that brings together researchers in programming languages and human-computer interaction.\\[2pt]
+
 %5. Led an MIT M.Eng. student through the process of deploying a variant of the same tool, \ttt{GroverCode}, to fulfill her thesis requirement and support the composition grading of hundreds of MIT student-written programs submitted in the MIT EECS department's introductory programming course.\\[2pt]
 %5. Co-taught the combined undergraduate/graduate user interface design course that was part of the core curriculum for CS students in the MIT EECS department (approx. 175 students).
 %1. Faculty Director for the Jacobs Institute for Design Innovation at UC Berkeley, a new undergraduate engineering design institute at home in the newly constructed Jacobs Hall. (CTO Spring 2014--2016, Director 2016--Present, building opened in Fall 2015.)\\{\small \url{http://jacobsinstitute.berkeley.edu}}\\[2pt]
