Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -221,18 +221,22 @@ Harvard University (Cambridge, MA, USA)\\
 %Responsible for User Needs Assessment, Development of Scenarios
 
 \Section{Professional Preparation:}\\
-\DatedItem{June 2008}{Massachusetts Institute of Technology (Cambridge, MA, USA)}{\\
-    Bachelor of Science in Electrical Science \& Engineering}
-\DatedItem{Feb 2010}{Massachusetts Institute of Technology (Cambridge, MA, USA)}{\\
-    Master of Engineering in Electrical Engineering \& Computer Science}
-\DatedItem{Sept 2016}{Massachusetts Institute of Technology (Cambridge, MA, USA)}{\\
-    Doctor of Philosophy in Electrical Engineering \& Computer Science\\
-    Thesis: \textit{Clustering and Visualizing Solution Variation in Massive Programming Classes}\\
-    Thesis Advisor: Rob Miller, Distinguished Professor of Computer Science }\\
-\DatedItem{2016--2018}{University of California, Berkeley (Berkeley, CA, USA)}{\\
-    Postdoctoral Scholar, EECS \& Berkeley Institute for Design\\
-    Fellow, Berkeley Institute of Data Science
-}
+Massachusetts Institute of Technology, Cambridge MA, \ BS in Electrical Sci \& Eng \hfill June '08\\
+Massachusetts Institute of Technology, Cambridge MA, \ MEng in Electrical Eng \& Comp Sci \hfill Feb '10\\
+Massachusetts Institute of Technology, Cambridge MA, \ PhD in Electrical Eng \& Comp Sci \hfill Sep '16\\
+University of California, Berkeley, \ Postdoctoral Scholar, Electrical Eng \& Comp Sci \hfill '16-18
+%\DatedItem{June 2008}{Massachusetts Institute of Technology (Cambridge, MA, USA)}{\\
+%    Bachelor of Science in Electrical Science \& Engineering}
+%\DatedItem{Feb 2010}{Massachusetts Institute of Technology (Cambridge, MA, USA)}{\\
+%    Master of Engineering in Electrical Engineering \& Computer Science}
+%\DatedItem{Sept 2016}{Massachusetts Institute of Technology (Cambridge, MA, USA)}{\\
+%    Doctor of Philosophy in Electrical Engineering \& Computer Science\\
+%    Thesis: \textit{Clustering and Visualizing Solution Variation in Massive Programming Classes}\\
+%    Thesis Advisor: Rob Miller, Distinguished Professor of Computer Science }\\
+%\DatedItem{2016--2018}{University of California, Berkeley (Berkeley, CA, USA)}{\\
+%    Postdoctoral Scholar, EECS \& Berkeley Institute for Design\\
+%    Fellow, Berkeley Institute of Data Science
+%}
 
 
 %----------------------------------------------------------------------------
@@ -243,7 +247,7 @@ Harvard University (Cambridge, MA, USA)\\
 \DatedItem{2018--2018}{Harvard University (Cambridge, MA, USA)}{  \\
             Research Associate, CS, SEAS
 }
-\\\\
+\\
 
       %----------------------------------------------------------------------------
 
@@ -256,7 +260,7 @@ Harvard University (Cambridge, MA, USA)\\
 \Section{Products}\\
 {\bf Five Most Relevant Products:}\\
 % CHI 2018
-1. ``How Proxy Tasks and Subjective Measures Can Be Misleading in Evaluating XAI Systems'' by Zana Bucinca*, Phoebe Lin*, Krzysztof Gajos, and Elena Glassman. To be published in {\em ACM Intelligent User Interfaces} (IUI) 2020. *indicates equal contribution\\[2pt]
+1. ``How Proxy Tasks and Subjective Measures Can Be Misleading in Evaluating XAI Systems'' by Zana Bucinca*, Phoebe Lin*, Krzysztof Gajos, and Elena Glassman. {\em ACM Intelligent User Interfaces} (IUI) 2020. *indicates equal contribution\\[2pt]
 2. ``Characterizing Developer Use of Automatically Generated Patches'' by Jos\'e Pablo Cambronero, Jiasi Shen, J\"urgen Cito, Elena Glassman, and Martin Rinard. IEEE VL/HCC 2019.\\[2pt]
 3. ``Enabling Data-Driven API Design with Community Usage Data: A Need-Finding Study'' by Tianyi Zhang, Björn Hartmann, Miryung Kim, and Elena Glassman. To be published in \emph{ACM Conference on Human Factors in Computing Systems} (CHI) 2020.\\[2pt]
 4. ``Visualizing API Usage Examples at Scale'' by Elena Glassman*, Tianyi Zhang*, Bj\"orn Hartmann, Miryung Kim. \emph{ACM Conference on Human Factors in Computing Systems} (CHI), Paper No. 580, 2018. *indicates equal contribution\\[2pt]
